--- a/Exercicios/ex024/iframe003.html
+++ b/Exercicios/ex024/iframe003.html
@@ -37,7 +37,7 @@
         <li><a href="pag003.html" target="frame">terceira página</a></li>
     </ul>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, dolores, aliquam labore incidunt asperiores distinctio fugit corporis quisquam laboriosam tempora blanditiis adipisci tempore inventore ratione laborum recusandae hic harum saepe? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia rem odio, sequi odit magnam obcaecati minus voluptatibus ex alias saepe esse iusto reprehenderit? Quidem fugit iusto atque hic quae suscipit!</p>
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" src="pag003.html">
         <p>Infelizmente seu navegador não é compativel com isso</p>
     </iframe>
 
