--- a/Desafios/Desafio 5 (Redo)/index.html
+++ b/Desafios/Desafio 5 (Redo)/index.html
@@ -20,7 +20,7 @@
         }
 
         h1{
-            font-family: mer;
+            font-family: 'Bebas Neue';
             background-image: linear-gradient(to right, chocolate, yellow);
             width: 100%;
             text-align: center;
@@ -36,7 +36,7 @@
         }
 
         h2, ul{
-            padding: 20px;
+            padding: 30px;
         }
 
         a{
@@ -45,7 +45,27 @@
         }
 
         a:hover{
+            background-color: bisque;
+            color: chocolate;
             text-decoration: underline;
+            transition: 0.5s;
+            border-radius: 5px;
+        }
+
+      
+
+        footer > a:hover{
+            background-color: chocolate;
+            color: black;
+            text-decoration: underline;
+        }
+
+        footer > a{
+            color: chocolate;
+            text-decoration: none;
+            display: block;
+            text-align: center;
+            background-color: black;
         }
     </style>
 </head>
@@ -55,21 +75,24 @@
     <h2>Who am I?</h2>
 
     <img height="200px" src="garfield-logo-png_seeklogo-259323.png" alt="Garfield">
-    <p>I am a sassy little baka who likes to disturb and annoy every single little being that comes near me.
-    So beware my presence or prepare so face eternal suffering!
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, aut officia. Nihil accusantium soluta molestias possimus voluptates suscipit, optio voluptatem eligendi magnam consequatur provident expedita esse, ea ducimus ipsum. Officia?
+    <p>What is the story of Garfield?
+        Garfield | The Story Museum
+        A hugely popular comic strip about the one and only lazy, lasagne eating cat. Garfield is a fat, lazy, orange cat who loves lasagne and hates Mondays. He lives with his owner, Jon Arbuckle, and a drooling dog called Odie. He is an expert manipulator, and his infinite appetite gets him and Jon into all sorts of trouble.
     </p>
 </article>
-    <h2>Como falar comigo?</h2>
+    <h2>How to contact me?</h2>
 
     <ul>
         <li> &#x1F415; <a href="https://www.youtube.com/@thegarfieldshowbrasil">YouTube</a> Watch me here babes</li>
 
-        <li> &#x1F425; <a href="https://www.youtube.com/@thegarfieldshowbrasil">Instagram</a> I hate insta</li>
+        <li> &#x1F425; <a href="https://www.instagram.com/garfield/?hl=pt">Instagram</a> I hate insta</li>
 
-        <li> &#x1F9A8; <a href="https://www.youtube.com/@thegarfieldshowbrasil">Facebook</a> Love my old facebook</li>
+        <li> &#x1F9A8; <a href="https://www.facebook.com/Garfield/?locale2=pt_PT&_rdr">Facebook</a> Love my old facebook</li>
 
-        <li> &#x1F426; <a href="https://www.youtube.com/@thegarfieldshowbrasil">Get out!</a> Dislike whos reading </li>
+        <li> &#x1F426; <a href="#">Get out!</a> Dislike whos reading </li>
     </ul>
+    <footer>
+        <a href="pag02.html">Next page</a>
+    </footer>
 </body>
 </html>
