--- a/Desafios/Desafio 5 (Redo)/index.html
+++ b/Desafios/Desafio 5 (Redo)/index.html
@@ -16,6 +16,8 @@
         body{
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             overflow-x: hidden; /* Prevents horizontal scrolling */
+            height: 100vh;
+            width: 100vw;
            
         }
 
