--- a/Desafios/Desafio 5 (Redo)/index.html
+++ b/Desafios/Desafio 5 (Redo)/index.html
@@ -63,11 +63,13 @@
         }
 
         footer > a{
+            margin-top: auto; /* Pushes the footer to the bottom */
             color: chocolate;
             text-decoration: none;
             display: block;
             text-align: center;
             background-color: black;
+            
         }
     </style>
 </head>
